--- a/sample/sample01.html
+++ b/sample/sample01.html
@@ -35,7 +35,7 @@
         }
         function signTransaction() {
           if(!useIdentity){
-            document.getElementById("signatureDiv").innerHTML = "Login Frist";
+            document.getElementById("signatureDiv").innerHTML = "Please login first";
             return;
           }
           // 转账
