--- a/sample/sample01.html
+++ b/sample/sample01.html
@@ -175,6 +175,9 @@
           }).catch(e => {
               console.log(e);
           })
+           
+          // 广播签名交易
+          // 使用 RPC 文档（https://github.com/chainx-org/ChainX/wiki/RPC）中 author_submitExtrinsic方法
         }
     </script>
 </head>
