--- a/sample/pcxvote/index.html
+++ b/sample/pcxvote/index.html
@@ -30,6 +30,11 @@
     <h5>02号提案：《限制用户频繁切换投票提案》</h5><br>
     <a href="vote002.html" class="confirm">前去投票</a>
   </div>
+  <br>
+  <div class="card" style="color:#333;text-align:left">
+    <h5>03号提案：《支出议会基金上币MXC抹茶交易所》</h5><br>
+    <a href="vote003.html" class="confirm">前去投票</a>
+  </div>
   <ul class="qixi-about">
     <li>
       <h3>计票页面</h3>
