--- a/sample/pcxvote/index.html
+++ b/sample/pcxvote/index.html
@@ -22,18 +22,22 @@
     </li>
   </ul>
   <div class="card" style="color:#333;text-align:left">
-    <h5>01号提案：《加强节点自抵押限制提案》</h5><br>
-    <a href="vote001.html" class="confirm">前去投票</a>
+    <h5>04号提案：《支出议会基金支持BigONE推动ChainX生态发展》</h5><br>
+    <a href="vote004.html" class="confirm">前去投票</a>
+  </div>
+  <br>
+  <div class="card" style="color:#333;text-align:left">
+    <h5>03号提案：《支出议会基金上币MXC抹茶交易所》</h5><br>
+    <a href="vote003.html" class="confirm">前去投票</a>
   </div>
   <br>
   <div class="card" style="color:#333;text-align:left">
     <h5>02号提案：《限制用户频繁切换投票提案》</h5><br>
     <a href="vote002.html" class="confirm">前去投票</a>
   </div>
-  <br>
   <div class="card" style="color:#333;text-align:left">
-    <h5>03号提案：《支出议会基金上币MXC抹茶交易所》</h5><br>
-    <a href="vote003.html" class="confirm">前去投票</a>
+    <h5>01号提案：《加强节点自抵押限制提案》</h5><br>
+    <a href="vote001.html" class="confirm">前去投票</a>
   </div>
   <ul class="qixi-about">
     <li>
